--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,32 @@
     <title>My First Steps In Git</title>
 </head>
 <body>
-    
+    <header>
+        <img src="images/logo.jpg" alt="Hexlet">
+        <p>Просекова Виктория Викторовна 1101о</p>
+    </header>
+    <div class="now1">
+        <h1>Мои прошлые увлечения</h1>
+        <p>Когда я была маленькой я начала заниматься художественной гимнастикой, но мне очень не понравился данный вид спорта, поэтому я решила бросить это.</p>
+        <img src="images/гимнастика.jpg" alt="Гимнастика">
+    </div>
+    <div class="now2">
+        <h2>Мои нынешние увлечения</h2>
+        <p>Очень удачно в 2011 году прям рядом с домом построился и открылся "ЦВВС Невская волна". <br> Я начала ходить на секцию прыжков в воду. Все началось получаться.Сейчас я многократная чемпионка России и чемпионка Европы. <br> Люблю дело, которым занимаюсь и планирую продолжать в том же духе.</p>
+        <img src="images/первыепрыжки.jpg" alt="Первые прыжки">
+    </div>
+    <div class="future">
+        <h3>Мое будущее</h3>
+        <p>Свое будущее в идеале я вижу в виде победы на Олимпиаде, но становиться тренером я не хочу. <br> Именно поэтому я поступила в Хекслет колледж, чтобы разнообразить свою жизнь и сделать её менее спортивной.</p>
+        <img class=future1 src="images/успех.jpeg" alt="Успех">
+        <img class="future2" src="images/эмблема.png" alt="РФПВВ">
+    </div>
+    <footer>
+        <div class="footer">
+            <a href="https://instagram.com/_prskvv?igshid=NTc4MTIwNjQ2YQ==">
+                 <img class="ig" src="images/инста.png" alt="Инстарам">
+             </a>
+        </div>
+    </footer>
 </body>
 </html>
