--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     </div>
     <div class="future">
         <h3>Мое будущее</h3>
-        <p>Свое будущее в идеале я вижу в виде победы на Олимпиаде, но становиться тренером я не хочу. <br> Именно поэтому я поступила в Хекслет колледж, чтобы разнообразить свою жизнь и сделать её менее спортивной.</p>
+        <p>Свое будущее в идеале я вижу в виде победы на Олимпиаде, но становиться тренером я не хочу. <br> Именно поэтому я поступила в Хекслет колледж, чтобы разнообразить свою жизнь и сделать её менее спортивной. А ещё тут я познакомилась с таким парнем, зовут Марк. Мы сдолго с ним дружили, но никак не могли признаться во взаимных чуствах. Хотя оба знали, что нравимся друг-другу. Я иногда расстраивалась и думала это не всзаимно. А сейчас мы любим друг друга и никто и ничто не заберет моё счастье! Ведь я люблю его <3 </p>
         <img class=future1 src="images/успех.jpeg" alt="Успех">
         <img class="future2" src="images/эмблема.png" alt="РФПВВ">
     </div>
